# Palautusrepositorio

./: README.md
viikko1/nhl-statistics-1/: .gitignore
viikko1/nhl-statistics-1/src/: .coverage  index.py  player_reader.py  sortby.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko1/riippuvuuksien-injektointi-1/: pyproject.toml
viikko2/: another.txt  ex9.txt  exercise9.txt  haara2.txt  tracking.txt
viikko2/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko2/poetry-web/src/: project.py  project_reader.py
viikko3/: log.html  output.xml  report.html
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/: log.html  output.xml  report.html
viikko3/hello-robot/src/tests/: increase_counter.robot  resource.robot
viikko3/login-robot/: interactive_console_output.xml  log.html  output.xml  report.html
viikko3/login-robot/src/: log.html  output.xml  report.html
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  (+1 more)
viikko3/web-login/: log.html  output.xml  report.html
viikko4/: retro.md  tagging.md
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/verkkokauppa/: .coverage  .gitignore
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py
viikko5/src/: tennis_game.py
viikko6/: rebase.md  rebasing.md
viikko6/query-language/src/: index.py  matchers.py  querybuilder.py
viikko7/: MERGE.md  another.md  file.md  two.md
(+6 files in other folders)
