[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Valtteri Ahola <valtteri.ahola@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
